<resources>
    <string name="app_name">GetVisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apply">Apply for Visa</string>
    <string name="hello_msg">Hello,</string>
    <string name="discard">Discard</string>
    <string name="form_status">Form Status :</string>
    <string name="welcome_msg">Welcome to the GetVisa App.</string>
    <string name="apply_for_visa">You can begin with your visa application process by simply clicking on the \"Apply for Visa\" button below.</string>
    <string name="complete_form">You are almost done wih the visa application form, just fill out remaining few details and submit it now.</string>
    <string name="complete">Complete Visa Form</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visa_form">Visa Form</string>
    <string name="p_code">Project Code</string>
    <string name="passport_details">Passport Details</string>
    <string name="pass_number">Passport Number</string>
    <string name="pass_loc">Place of Issuing Passport</string>
    <string name="pass_issue_date">Passport Issue Date</string>
    <string name="pass_expiry_date">Passport Expiry Date</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="pcode_hint">eg. 13-ASD-0425</string>
    <string name="title_activity_visa_form1">VisaForm</string>
    <string name="submit">Submit</string>
    <string name="visa_details">Visa Details</string>
    <string name="visa_country">Visa Country</string>
    <string name="visa_entry">Visa Entry</string>
    <string name="req_from_date">Required from Date</string>
    <string name="req_to_date">Required to Date</string>
    <string name="title_activity_db_check">DbCheckActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_details">Login Details</string>
    <string name="login_id">Login Id</string>
    <string name="create_pass">Create Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="emp_detail">Employee Detail</string>
    <string name="man_detail">Manager Detail</string>
    <string name="register">Register</string>

    <!--Second Signup Fragment -->
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emp_dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>

    <!--Third Signup Fragment -->
    <string name="contact_details">Contact Details</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Id</string>
    <string name="Location">Location</string>
    <string name="other_details">Other Details</string>
    <string name="emp_code">Employee Code</string>
    <string name="desgn">Designation</string>
    <string name="done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emp">Employee</string>
    <string name="manager">Manager</string>
    <string name="last">Last Step</string>
    <string name="success">You have successfully created Getvisa app account.</string>
    <string name="some_detail">A verification mail has been sent to your registered email id. Please verify your email id and activate your account.</string>
    <string name="login_screen">Go to login screen</string>

</resources>
