<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.example.android.getvisa.FourthSignupFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last"
        android:id="@+id/textView22"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/horizontal_bar"
        android:paddingTop="2dp"
        android:paddingBottom="4dp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/success"
        android:id="@+id/textView20"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/some_detail"
        android:id="@+id/textView21"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen"
        android:id="@+id/doneBtn"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginTop="25dp"/>
    </LinearLayout>




</LinearLayout>
